--- a/challenge-aluraflix/src/componentes/Cabecalho/Cabecalho.css
+++ b/challenge-aluraflix/src/componentes/Cabecalho/Cabecalho.css
@@ -1,4 +1,6 @@
 .cabecalho {
+  width: 100%;
+  background-color: var(--cor-fundo-3);
     padding: 15px;
     color: var(--texto-2);
     display: flex;
@@ -18,14 +20,17 @@
   .navegacao  nav {
     display: flex;
     gap: 15px;
+    justify-content: space-between;
+    margin: 0 50px;
   }
   
-  .navegacao  a {
-    color: var(--texto-1);
+   a {
+    color: var(--texto-2);
     text-decoration: none;
+    margin: 0 15px;
   }
-  
-  .navegacao  a:hover {
-    text-decoration: underline;
+
+  a:hover {
+    text-decoration: none;
+    color: var(--selecionado);
   }
-  
