--- a/challenge-aluraflix/src/index.css
+++ b/challenge-aluraflix/src/index.css
@@ -1,83 +1,21 @@
 :root {
+  --fonte: "Roboto", sans-serif;
   --cor-fundo-1: #830024;
   --cor-fundo-2: #e16639;
+  --cor-fundo-3: #f6828c;
   --texto-1: #fff0f3;
   --texto-2: #44021e;
   --selecionado: #ff4d6d;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html, body {
-  height: 100%;
-  font-family: Arial, sans-serif;
-  background-color: var(--cor-fundo-1);
-  color: #333;
-}
-
-/* Estilos Globais */
 body {
-  line-height: 1.6;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 10px;
-  color: var(--texto-2);
-}
-
-p {
-  margin-bottom: 10px;
-}
-
-a {
-  text-decoration: none;
-  color: var(--selecionado);
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-button {
-  cursor: pointer;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 5px;
+  margin: 0;
   background-color: var(--cor-fundo-2);
-  color: #fff;
-  transition: background-color 0.3s ease;
+  font-family: var(--fonte);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-button:hover {
-  background-color: var(--selecionado);
-}
-
-/* Flexbox Utility Classes */
-.flex {
-  display: flex;
-}
-
-.flex-column {
-  flex-direction: column;
-}
-
-.flex-center {
-  align-items: center;
-  justify-content: center;
-}
-
-/* Container */
-.container {
-  max-width: 1200px;
-  width: 100%;
-  padding: 0 20px;
-  margin: 0 auto;
+code {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
