--- a/challenge-aluraflix/src/index.css
+++ b/challenge-aluraflix/src/index.css
@@ -3,6 +3,7 @@
   --cor-fundo-1: #830024;
   --cor-fundo-2: #e16639;
   --cor-fundo-3: #f6828c;
+  --cor-fundo-4: #a64253;
   --texto-1: #fff0f3;
   --texto-2: #44021e;
   --selecionado: #ff4d6d;
