--- a/challenge-aluraflix/src/page/NovoVideo/NovoVideo.css
+++ b/challenge-aluraflix/src/page/NovoVideo/NovoVideo.css
@@ -1,25 +1,90 @@
+
+
 .novo-video {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 80vh;
-    padding: 20px;
-  }
-  
-  .novo-video h1 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  .novo-video main {
-    max-width: 800px;
-    width: 100%;
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  
+  width: 100%;
+}
+
+
+
+.formulario h1 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.formulario p {
+  font-weight: normal;
+  text-align: center;
+}
+
+
+.formulario-envio {
+  border: 2px;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 1500px;
+  margin: 0 auto;
+  background-color: var(--cor-fundo-1);
+  align-items: center;
+  text-align: center;
+}
+
+.form-group {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.form-group>div {
+  flex: 1 1 33.33%;
+}
+
+.form-group input,
+.form-group select,
+.form-group textarea {
+  width: 100%;
+  padding: 8px;
+  font-size: 1rem;
+  border: 1px solid var(--texto-2);
+  border-radius: 4px;
+  background-color: var(--cor-fundo-4);
+  border: 20px;
+}
+
+
+.form-actions {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.submit-btn,
+.reset-btn {
+  padding: 10px 20px;
+  font-size: 1rem;
+  color: var(--texto-1);
+  background-color: var(--cor-fundo-3);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.submit-btn:hover,
+.reset-btn:hover {
+  background-color: var(--selecionado);
+}
+
+.formulario {
+  margin: 10px;
+}
+
+
+.item-formulario:hover,
+.item-formulario:focus {
+  border-color: var(--selecionado);
+  outline: none;
+}
+
+.descricao {
+  max-width: 55%;
+}
