--- a/challenge-aluraflix/src/componentes/Modal/Modal.css
+++ b/challenge-aluraflix/src/componentes/Modal/Modal.css
@@ -1,67 +1,69 @@
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content {
-    background: var(--cor-fundo-3);
-    padding: 20px;
-    border-radius: 10px;
-    width: 400px;
-    position: relative;
-  }
-  
-  .modal-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  
-  /* .form-group {
-    display: flex;
-    flex-direction: column;
-  } */
-  
-  /* .form-group label {
-    margin-top: 10px;
-  }
-  
-  .form-group input, 
-  .form-group select, 
-  .form-group textarea {
-    margin-top: 5px;
-    padding: 10px;
-    border: 1px solid var(--cor-fundo-4);
-    border-radius: 5px;
-  }
-  
-  .form-actions {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
-  
-  .form-actions button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #830024;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .form-actions button:hover {
-    background-color: #e16639;
-  }
-   */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; 
+  padding-top: 50px; 
+}
+
+.modal-content {
+  background-color: var(--cor-fundo-1);
+  border: 2px solid var(--texto-2);
+  border-radius: 8px;
+  padding: 20px;
+  max-width: 800px; 
+  width: 100%;
+}
+
+
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.modal-form label {
+  font-weight: bold;
+}
+
+.modal-form input,
+.modal-form select,
+.modal-form textarea {
+  width: 100%;
+  padding: 8px;
+  font-size: 1rem;
+  border: 1px solid var(--texto-2);
+  border-radius: 4px;
+  background-color: var(--cor-fundo-4);
+  color: var(--texto-1);
+}
+
+.modal-form textarea {
+  resize: vertical; 
+}
+
+.form-actions {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.form-actions button {
+  padding: 10px 20px;
+  font-size: 1rem;
+  color: var(--texto-1);
+  background-color: var(--cor-fundo-3);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-actions button:hover {
+  background-color: var(--selecionado);
+}
